2014-07-28  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/download/browse.php: Now is possible to delete
	repository files from the file releases creator.

2014-07-28  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* extras/mr/11.sql: Added file. New MR11.

2014-07-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/help/en/help_workflow_conditions.php
	  include/help/es/help_workflow_conditions.php: Modified
	help.

	* images/help/workflow_actions.png
	  images/help/workflow_actions2.png
	  images/help/workflow_conditions.png: Added images.

2014-07-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/help/en/help_workflow_conditions.php
	  include/help/es/help_workflow_conditions.php: Added
	files.

2014-07-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql
	  godmode/setup/setup_maintenance.php
	  include/integria_cron.php: Changed maintenance of
	'tevent'.

	* include/help/en/help_old_workflow_events.php
	  include/help/es/help_old_workflow_events.php: Added
	files.

	* include/functions_form.php
	  include/functions_incidents.php
	  operation/incidents/incident_search.php
	  operation/incidents/incident_search_logic.php: Fixed
	custom search.

2014-07-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php
	  include/functions_incidents.php
	  operation/incidents/incident_search.php
	  operation/incidents/incident_search_logic.php: Added
	view tickets grouped by project/task.

2014-07-11  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php
	  integria_dbdata.sql
	  general/home.php
	  godmode/setup/newsboard.php
	  include/functions.php
	  include/functions_html.php: Changed news board.

	* extras/mr/10.sql
	  general/news_dialog.php
	  include/js/encode_decode_base64.js: Added files.

2014-07-07  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_graph.php: Fixed bug
	with the color of legend in graphs.

2014-07-04  Vanessa Gil <vanessa.gil@artica.es>
	