@@ -1,3 +1,11 @@
+2014-07-30  Alejandro Gallardo <alejandro.gallardo@artica.es>
+
+	* godmode/setup/setup.php: Added a new token to choose
+	the encoding of the exported CSV files.
+
+	* include/export_csv.php: Improved the CSV exportation
+	to improve the compatibility with Excel®.
+
 2014-07-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
 	* operation/download/browse.php: Now is possible to delete
